@@ -20,14 +20,12 @@
   <ProjectSessionItem path="LPC1114_CodeBase;LPC1114_CodeBase" name="unnamed" />
   <ProjectSessionItem path="LPC1114_CodeBase;LPC1114_CodeBase;Source Files" name="unnamed" />
   <ProjectSessionItem path="LPC1114_CodeBase;LPC1114_CodeBase;Source Files;core" name="unnamed" />
-  <ProjectSessionItem path="LPC1114_CodeBase;LPC1114_CodeBase;Source Files;core;i2c" name="unnamed" />
+  <ProjectSessionItem path="LPC1114_CodeBase;LPC1114_CodeBase;Source Files;core;pmu" name="unnamed" />
   <ProjectSessionItem path="LPC1114_CodeBase;LPC1114_CodeBase;Source Files;core;timer16" name="unnamed" />
   <ProjectSessionItem path="LPC1114_CodeBase;LPC1114_CodeBase;Source Files;drivers" name="unnamed" />
-  <ProjectSessionItem path="LPC1114_CodeBase;LPC1114_CodeBase;Source Files;drivers;chibi" name="unnamed" />
-  <ProjectSessionItem path="LPC1114_CodeBase;LPC1114_CodeBase;Source Files;drivers;eeprom" name="unnamed" />
-  <ProjectSessionItem path="LPC1114_CodeBase;LPC1114_CodeBase;Source Files;drivers;eeprom;mcp24aa" name="unnamed" />
   <ProjectSessionItem path="LPC1114_CodeBase;LPC1114_CodeBase;Source Files;drivers;fatfs" name="unnamed" />
-  <ProjectSessionItem path="LPC1114_CodeBase;LPC1114_CodeBase;Source Files;drivers;pwm" name="unnamed" />
+  <ProjectSessionItem path="LPC1114_CodeBase;LPC1114_CodeBase;Source Files;drivers;motor" name="unnamed" />
+  <ProjectSessionItem path="LPC1114_CodeBase;LPC1114_CodeBase;Source Files;drivers;motor;stepper" name="unnamed" />
  </Project>
  <Register1>
   <RegisterWindow openNodes="CT16B1;CT16B1/TMR16B1PWMC;GPIO2" binaryNodes="" unsignedNodes="" visibleGroups="GPIO2;CT16B1" decimalNodes="" octalNodes="" asciiNodes="" />
@@ -49,8 +47,8 @@
   <Watches active="1" update="Each Second" >
    <Watchpoint linenumber="66" radix="10" name="msTicks" expression="msTicks" filename="c:/documents and settings/kevin/my documents/my dropbox/microbuilder/code/lpc1114/lpc1114_codebase/core/systick/systick.c" />
    <Watchpoint linenumber="72" radix="16" name="UARTBuffer" expression="UARTBuffer" filename="c:/users/kevin/documents/my dropbox/microbuilder/code/lpc1114/lpc1114_codebase/core/uart/uart.c" />
-   <Watchpoint linenumber="83" radix="10" name="stepperPosition" expression="stepperPosition" filename="c:/users/kevin/documents/my dropbox/microbuilder/code/lpc1114/lpc1114_codebase/drivers/motor/stepper/stepper.c" />
-   <Watchpoint linenumber="84" radix="10" name="stepperStepNumber" expression="stepperStepNumber" filename="c:/users/kevin/documents/my dropbox/microbuilder/code/lpc1114/lpc1114_codebase/drivers/motor/stepper/stepper.c" />
+   <Watchpoint linenumber="80" radix="10" name="stepperPosition" expression="stepperPosition" filename="c:/users/kevin/documents/my dropbox/microbuilder/code/lpc1114/lpc1114_codebase/drivers/motor/stepper/stepper.c" />
+   <Watchpoint linenumber="81" radix="10" name="stepperStepNumber" expression="stepperStepNumber" filename="c:/users/kevin/documents/my dropbox/microbuilder/code/lpc1114/lpc1114_codebase/drivers/motor/stepper/stepper.c" />
   </Watches>
  </Watch1>
  <Watch2>
@@ -62,6 +60,9 @@
  <Watch4>
   <Watches active="0" update="Never" />
  </Watch4>
- <Files/>
- <ARMCrossStudioWindow activeProject="LPC1114_CodeBase" autoConnectTarget="Segger J-Link" debugSearchFileMap="" fileDialogInitialDirectory="C:\Users\Kevin\Documents\My Dropbox\microBuilder\Code\LPC1114\LPC1114_CodeBase\drivers\motor\stepper" fileDialogDefaultFilter="*.c" autoConnectCapabilities="388991" debugSearchPath="" buildConfiguration="THUMB Flash Debug" />
+ <Files>
+  <SessionOpenFile useTextEdit="1" useBinaryEdit="0" codecName="Latin1" x="6" debugPath="C:\Users\Kevin\Documents\My Dropbox\microBuilder\Code\LPC1114\LPC1114_CodeBase\main.c" y="157" path="C:\Users\Kevin\Documents\My Dropbox\microBuilder\Code\LPC1114\LPC1114_CodeBase\main.c" left="0" selected="0" name="unnamed" top="123" />
+  <SessionOpenFile useTextEdit="1" useBinaryEdit="0" codecName="Latin1" x="0" debugPath="C:\Users\Kevin\Documents\My Dropbox\microBuilder\Code\LPC1114\LPC1114_CodeBase\projectconfig.h" y="73" path="C:\Users\Kevin\Documents\My Dropbox\microBuilder\Code\LPC1114\LPC1114_CodeBase\projectconfig.h" left="0" selected="1" name="unnamed" top="294" />
+ </Files>
+ <ARMCrossStudioWindow activeProject="LPC1114_CodeBase" autoConnectTarget="Segger J-Link" debugSearchFileMap="" fileDialogInitialDirectory="C:\Users\Kevin\Documents\My Dropbox\microBuilder\Code\LPC1114\LPC1114_CodeBase\core\pwm" fileDialogDefaultFilter="*.c" autoConnectCapabilities="388991" debugSearchPath="" buildConfiguration="THUMB Flash Release" />
 </session>
